<resources>
    <!-- General screen text -->
    <string name="app_name">texi</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="student_number">Student Number</string>
    <string name="register">Register</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="university">University</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="email_address">Email Address</string>
    <string name="back">Back</string>
    <string name="view_all">View All</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="upload_textbook">Upload Textbook</string>
    <string name="my_profile">My Profile</string>
    <string name="all_textbooks">All Textbooks</string>
    <string name="logout">Logout</string>
    <string name="field_of_study">Field Of Study</string>
    <string name="degree_of_study">Degree Of Study</string>
    <string name="details">Details</string>
    <string name="field">Field</string>
    <string name="degree">Degree</string>
    <string name="title">Title</string>
    <string name="inquire">Inquire</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="my_uploads">My Uploads</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="uploads">Uploads</string>
    <string name="upload">Upload</string>
    <string name="upload_a_textbook">Upload A Textbook</string>
    <string name="chat">Chat</string>
    <string name="type">Type…</string>
    <string name="filter_textbooks">Filter Textbooks</string>
    <string name="filter">Filter</string>
    <string name="no_books_found">No books found.</string>
    <string name="login_logo">Login logo</string>
    <string name="scrollable_main_content">Scrollable main content</string>
    <string name="open_home">Open home</string>
    <string name="open_my_profile">Open my profile</string>
    <string name="texi_logo">Texi logo</string>
    <string name="open_menu">Open menu</string>
    <string name="view_all_textbooks">View all textbooks</string>
    <string name="search_textbooks">Search textbooks</string>
    <string name="textbook_cover_image">Textbook cover image</string>
    <string name="edit_textbook_cover_image">Edit textbook cover image</string>
    <string name="close_filter_options">Close filter options</string>
    <string name="send_message">Send message</string>
    <string name="textbook_cover_image_preview">Textbook cover image preview</string>
    <string name="edit">Edit</string>

    <!-- Registration arrays -->
    <string-array name="university_options">
        <item>STADIO Higher Education</item>
        <item>UCT</item>
        <item>UNISA</item>
        <item>UP</item>
        <item>Wits</item>
        <item>Other</item>
    </string-array>

    <string-array name="field_options">
        <item>Business</item>
        <item>Education</item>
        <item>Environmental Studies</item>
        <item>Information Technology</item>
        <item>Law</item>
        <item>Other</item>
    </string-array>

    <string-array name="degree_options">
        <item>Higher Certificate</item>
        <item>Diploma</item>
        <item>Bachelor’s</item>
    </string-array>
</resources>