<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_edit_uploaded_textbook_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_edit_uploaded_textbook_back"
        style="@style/DefaultIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/iv_edit_uploaded_textbook_details_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_login_logo"
        app:layout_constraintBottom_toTopOf="@+id/ll_edit_uploaded_textbook_details_filter_categories"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/ib_edit_uploaded_textbook_details_edit_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_edit_uploaded_textbook_back" />

    <ImageButton
        android:id="@+id/ib_edit_uploaded_textbook_details_edit_icon"
        style="@style/DefaultIcon"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/iv_edit_uploaded_textbook_details_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit_uploaded_textbook_details_edit_details" />

    <LinearLayout
        android:id="@+id/ll_edit_uploaded_textbook_details_filter_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        android:layout_marginBottom="@dimen/small_spacing"
        android:gravity="clip_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_uploaded_textbook_details_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_edit_uploaded_textbook_details_image">

        <TextView
            android:id="@+id/tv_edit_uploaded_textbook_details_university"
            style="@style/SecondaryBodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/university" />

        <TextView
            android:id="@+id/tv_edit_uploaded_textbook_details_field"
            style="@style/SecondaryBodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field" />

        <TextView
            android:id="@+id/tv_edit_uploaded_textbook_details_degree"
            style="@style/SecondaryBodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/degree" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_edit_uploaded_textbook_details_title"
        style="@style/TextbookDetailsPrimaryHeadingText"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_uploaded_textbook_details_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edit_uploaded_textbook_details_filter_categories" />

    <EditText
        android:id="@+id/et_edit_uploaded_textbook_details_author"
        style="@style/TextbookDetailsSecondaryHeadingText"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/author"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_uploaded_textbook_details_isbn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_uploaded_textbook_details_title" />

    <EditText
        android:id="@+id/et_edit_uploaded_textbook_details_isbn"
        style="@style/TextbookDetailsSmallHeadingText"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/isbn"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_uploaded_textbook_details_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_uploaded_textbook_details_author" />

    <EditText
        android:id="@+id/et_edit_uploaded_textbook_details_description"
        style="@style/TextbookDetailsPrimaryBodyText"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_uploaded_textbook_details_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_uploaded_textbook_details_isbn" />

    <EditText
        android:id="@+id/et_edit_uploaded_textbook_details_price"
        style="@style/TextbookDetailsSmallHeadingText"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/ll_edit_uploaded_textbook_details_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_uploaded_textbook_details_description" />

    <LinearLayout
        android:id="@+id/ll_edit_uploaded_textbook_details_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_uploaded_textbook_details_price">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btn_edit_uploaded_textbook_details_save"
            style="@style/LargePrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_uploaded_textbook_delete"
            style="@style/LargeSecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>